--- a/style/style.css
+++ b/style/style.css
@@ -63,7 +63,8 @@ body {
 }
 
 .four .text-box {
-  width: 90%;
+  width: 600px;
+  max-width: 90%;
   margin: 0 auto;
   border: 3px solid #aaa;
   border-radius: 5px;
